front page connect OP

--- a/front/views/index.ejs
+++ b/front/views/index.ejs
@@ -9,147 +9,98 @@
             <!-- Header-->
             <%- include('./layouts/header.ejs') %>
 
-                <!-- Section-->
-                <!-- Page Content -->
-                <div class="container">
-
-                    <!-- Page Heading -->
-                    <h1 class="my-4">Page Heading
-                        <small>Secondary Text</small>
-                    </h1>
-
-                    <div class="row">
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <img class="card-img-top" src="/a057f22314fbfc2bab7ea17ccc4d222b.jpg" alt="">
-                                <!-- image de l'animal  -->
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        Project One
-                                        <!-- Nom de l'animal -->
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                                        numquam
-                                        aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque
-                                        deserunt,
-                                        dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-                                    <!-- description de l'animal -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project One</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                                        numquam
-                                        aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque
-                                        deserunt,
-                                        dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project Two</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                        viverra
-                                        euismod
-                                        odio, gravida pellentesque urna varius vitae.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project Three</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos
-                                        quisquam,
-                                        error
-                                        quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et
-                                        facere atque
-                                        iure
-                                        perspiciatis mollitia recusandae vero vel quam!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project Four</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                        viverra
-                                        euismod
-                                        odio, gravida pellentesque urna varius vitae.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project Five</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                        viverra
-                                        euismod
-                                        odio, gravida pellentesque urna varius vitae.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#"><img class="card-img-top" src="https://via.placeholder.com/700x400"
-                                        alt=""></a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">Project Six</a>
-                                    </h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Itaque earum
-                                        nostrum
-                                        suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit
-                                        eius in
-                                        voluptates,
-                                        nemo repellat fugiat excepturi! Nemo, esse.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-
-                </div>
-                <!-- /.container -->
-                </section>
-                <!-- Footer-->
-                <footer class="py-5 bg-dark">
+                <main>
+                    <!-- Section-->
+                    <!-- Page Content -->
                     <div class="container">
-                        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
+                        <h2 class="mt-5 mb-4">Qui sommes nous?</h2>
+                        <p>Nous sommes un refuge bénévole qui recueille et propose à l'adoption de nombreux animaux.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel obcaecati officia aut velit
+                            reprehenderit eos magnam, dolor iusto, quod optio soluta ipsa fuga vero. Modi nemo veniam a
+                            quas
+                            reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel obcaecati
+                            officia
+                            aut velit
+                            reprehenderit eos magnam, dolor iusto, quod optio soluta ipsa fuga vero. Modi nemo veniam a
+                            quas
+                            reprehenderit.
+                        </p>
+
+
+                        <h2 class="mt-5 mb-4">Notre equipe</h2>
+                        <div class="row">
+                            <!-- Team Member 1 -->
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-0 shadow">
+                                    <img src="/images/user-3331257_1280.png" class="card-img-top" alt="...">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title mb-0">Coco</h5>
+                                        <div class="card-text text-black-50">bénévole</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Team Member 2 -->
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-0 shadow">
+                                    <img src="/images/user-3331257_1280.png" class="card-img-top" alt="...">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title mb-0">Jaco</h5>
+                                        <div class="card-text text-black-50">bénévole</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Team Member 3 -->
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-0 shadow">
+                                    <img src="/images/user-3331257_1280.png" class="card-img-top" alt="...">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title mb-0">Pedro</h5>
+                                        <div class="card-text text-black-50">bénévole</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Team Member 4 -->
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-0 shadow">
+                                    <img src="/images/user-3331257_1280.png" class="card-img-top" alt="...">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title mb-0">Fernando</h5>
+                                        <div class="card-text text-black-50">bénévole</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h2 class="mt-5 mb-4">Nos actions</h2>
+                        <img class="img_nos-actions" src="/images/lonely_puppy_1024_1_0.jpg" alt="">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum autem ad fugiat voluptatem
+                            quas,
+                            deserunt libero soluta. Neque odit impedit, in laudantium distinctio quisquam aut ullam
+                            soluta
+                            harum repudiandae. Inventore?
+                            Quo ad facilis totam, pariatur dolores mollitia dolor, in placeat natus officia earum fugiat
+                            asperiores labore, eum quidem dicta? Iste laudantium distinctio doloremque deserunt ad
+                            maiores
+                            suscipit tempore delectus perspiciatis!</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum autem ad fugiat voluptatem
+                            quas,
+                            deserunt libero soluta. Neque odit impedit, in laudantium distinctio quisquam aut ullam
+                            soluta
+                            harum repudiandae. Inventore?
+                            Quo ad facilis totam, pariatur dolores mollitia dolor, in placeat natus officia earum fugiat
+                            asperiores labore, eum quidem dicta? Iste laudantium distinctio doloremque deserunt ad
+                            maiores
+                            suscipit tempore delectus perspiciatis!</p>
+
                     </div>
-                </footer>
-                <!-- Bootstrap core JS-->
-                <script src="/js/bootstrap.bundle.min.js"></script>
-                <!-- Core theme JS-->
-                <script src="js/scripts.js"></script>
+                    <!-- /.container -->
+                    </section>
+                </main>
+                <!-- Footer-->
+                <%- include('./layouts/footer.ejs') %>
+                    <%- include('./layouts/scripts.ejs') %>
     </body>
 
 </html>
