--- a/front/views/layouts/nav.ejs
+++ b/front/views/layouts/nav.ejs
@@ -1,27 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container px-4 px-lg-5">
-		 <span class="h3">La petite niche</span>
-		 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-			  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-			  aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-		 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			  <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Acceuil</a></li>
-					<li class="nav-item"><a class="nav-link" href="/animaux">Voir nos Animaux</a></li>
-					<li class="nav-item"><a class="nav-link" href="/connect">Se connecter</a></li>
-					<li class="nav-item dropdown">
-						 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-							  data-bs-toggle="dropdown" aria-expanded="false">Plus</a>
-						 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							  <li><a class="dropdown-item" href="#!">All Products</a></li>
-							  <li>
-									<hr class="dropdown-divider" />
-							  </li>
-							  <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-							  <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-						 </ul>
-					</li>
-			  </ul>
-		 </div>
+		<span class="h3">La petite niche</span>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+				class="navbar-toggler-icon"></span></button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+				<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Acceuil</a></li>
+				<li class="nav-item"><a class="nav-link" href="/animaux">Voir nos Animaux</a></li>
+				<% if (!!userToken) { %>
+					<li class="nav-item"><a class="nav-link" href="/api/user/disconnect">Se déconnecter</a></li>
+					<% } else { %>
+						<li class="nav-item"><a class="nav-link" href="/connect">Se connecter</a></li>
+						<% } %>
+
+						<% if (isAdmin == true) { %>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+									data-bs-toggle="dropdown" aria-expanded="false">Plus</a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li><a class="dropdown-item" href="#!">All Products</a></li>
+									<li>
+										<hr class="dropdown-divider" />
+									</li>
+									<li><a class="dropdown-item" href="#!">Ajouter un animal</a></li>
+									<li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+								</ul>
+							</li>
+						<% } %>
+
+
+
+
+			</ul>
+		</div>
 	</div>
 </nav>
