--- a/front/views/connect.ejs
+++ b/front/views/connect.ejs
@@ -22,21 +22,21 @@
 
 								<!-- email Input -->
 								<div class="form-floating mb-3">
-									<input class="form-control" id="email-connect" type="email" placeholder="email"
-										name="email" />
+									<input class="form-control" id="email-connect" type="email" placeholder="email" name="email"
+										value="a@a.a" required/>
 									<label for="email-connect">email</label>
 								</div>
 
 								<!-- password Input -->
 								<div class="form-floating mb-3">
 									<input class="form-control" id="password-connect" type="password" placeholder="Mot de passe"
-										name="password" />
+										name="password" value="a" required/>
 									<label for="password-connect">Mot de passe</label>
 								</div>
 
 								<!-- Submit button -->
 								<div class="d-grid">
-									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Submit</button>
+									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Se connecter</button>
 								</div>
 							</form>
 							<!-- End of connect form -->
@@ -60,7 +60,7 @@
 									<label for="firstName">Prénom</label>
 									<div class="valid-feedback">
 										Looks good!
-									 </div>
+									</div>
 								</div>
 
 								<!-- lastName Input -->
@@ -86,14 +86,14 @@
 
 								<!-- check password Input -->
 								<div class="form-floating mb-3">
-									<input class="form-control" id="check-password" type="password" placeholder="Valider le mot de passe"
-										name="password" required />
+									<input class="form-control" id="check-password" type="password"
+										placeholder="Valider le mot de passe" name="password" required />
 									<label for="check-password">Valider le mot de passe</label>
 								</div>
 
 								<!-- Submit button -->
 								<div class="d-grid">
-									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Submit</button>
+									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Créer un compte</button>
 								</div>
 							</form>
 							<!-- End of contact form -->
