--- a/front/views/layouts/nav.ejs
+++ b/front/views/layouts/nav.ejs
@@ -23,7 +23,7 @@
 									<li>
 										<hr class="dropdown-divider" />
 									</li>
-									<li><a class="dropdown-item" href="/admin/ajout-animaux">Ajouter un animal</a></li>
+									<li><a class="dropdown-item" href="/admin/ajout-animal">Ajouter un animal</a></li>
 									<li><a class="dropdown-item" href="#!">New Arrivals</a></li>
 								</ul>
 							</li>
