--- a/front/views/animaux.ejs
+++ b/front/views/animaux.ejs
@@ -13,33 +13,48 @@
                     <div class="container">
 
                         <!-- Page Heading -->
-                        <h2 class="h1 my-4">Page Heading
-                            <small>Secondary Text</small>
+                        <h2 class="h1 my-4">Voici nos animaux
                         </h2>
 
                         <div class="row">
 
-                            <div class="col-lg-4 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <img class="card-img-top" src="/images/user-3331257_1280.png" alt="">
-                                    <!-- image de l'animal  -->
-                                    <div class="card-body">
-                                        <h4 class="card-title">
-                                            Project One
-                                            <!-- Nom de l'animal -->
-                                        </h4>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Amet
-                                            numquam
-                                            aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi
-                                            itaque
-                                            deserunt,
-                                            dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-                                        <!-- description de l'animal -->
+                            <% for( let i=0; i < animals.length; i++ ) { %>
+                                <div class="col-lg-4 col-sm-6 mb-4">
+                                    <div class="card h-100">
+                                        <img class="card-img-top" src="<%= animals[i].imageUrl %> " alt="">
+
+                                        <div class="card-body">
+                                            <h4 class="card-title">
+                                                <%= animals[i].name %>
+                                            </h4>
+
+                                            <p class="card-text">
+                                                <%= animals[i].content %>
+                                            </p>
+                                            <hr>
+                                            <div class="row mb-1">
+                                                <div class="col-6">
+                                                    <span>Sexe: <%= animals[i].sex %> </span>
+                                                </div>
+                                                <div class="col-6 text-center">
+                                                    <span>
+                                                        <% if (animals[i].sterilized) { %>
+                                                            stérilisé(e)
+                                                            <% } %>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <div class="row mb-1">
+                                                <span>Anniversaire: <%= animals[i].birthday %> </span>
+                                            </div>
+                                            <div class="row">
+                                                <span>Numéro de puce: <%= animals[i].puceNumber %> </span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
+                                <% } %>
 
                         </div>
                         <!-- /.row -->
