Animal delete OP, going to Animal update

--- a/front/views/layouts/nav.ejs
+++ b/front/views/layouts/nav.ejs
@@ -24,7 +24,7 @@
 											<hr class="dropdown-divider" />
 										</li>
 										<li><a class="dropdown-item" href="/admin/ajout-animal">Ajouter un animal</a></li>
-										<li><a class="dropdown-item" href="#!">Supprimer/Modifier un animal</a></li>
+										<li><a class="dropdown-item" href="/admin/modifier-supprimer-animaux">Supprimer/Modifier un animal</a></li>
 									</ul>
 								</li>
 								<% } %>
