--- a/front/views/admin-ajout-animal.ejs
+++ b/front/views/admin-ajout-animal.ejs
@@ -80,7 +80,7 @@
 								<!-- birthday input-->
 								<div class="form-floating mb-3">
 									<input class="form-control" id="birthday" type="date" placeholder="birthday"
-										name="birthday" />
+										name="birthday" value="2018-07-22"/>
 									<label for="birthday">Anniversaire</label>
 								</div>
 
