peaufinage + rédaction README.md

--- a/front/views/connect.ejs
+++ b/front/views/connect.ejs
@@ -23,20 +23,21 @@
 								<!-- email Input -->
 								<div class="form-floating mb-3">
 									<input class="form-control" id="email-connect" type="email" placeholder="email" name="email"
-										value="a@a.a" required/>
+										required />
 									<label for="email-connect">email</label>
 								</div>
 
 								<!-- password Input -->
 								<div class="form-floating mb-3">
 									<input class="form-control" id="password-connect" type="password" placeholder="Mot de passe"
-										name="password" value="a" required/>
+										name="password" required />
 									<label for="password-connect">Mot de passe</label>
 								</div>
 
 								<!-- Submit button -->
 								<div class="d-grid">
-									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Se connecter</button>
+									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Se
+										connecter</button>
 								</div>
 							</form>
 							<!-- End of connect form -->
@@ -93,7 +94,8 @@
 
 								<!-- Submit button -->
 								<div class="d-grid">
-									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Créer un compte</button>
+									<button class="btn btn-primary btn-lg mb-5" id="submitButton" type="submit">Créer un
+										compte</button>
 								</div>
 							</form>
 							<!-- End of contact form -->
