--- a/front/views/layouts/head.ejs
+++ b/front/views/layouts/head.ejs
@@ -1,17 +1,17 @@
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 	<title>La petite niche</title>
 
 	<!-- Favicon-->
-	<link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+	<link rel="icon" type="image/x-icon" href="/assets/favicon.png"/>
 	<!-- Bootstrap icons-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"
-		crossorigin="anonymous" />
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"
+		crossorigin="anonymous"/> -->
 	<!-- Core theme CSS (includes Bootstrap)-->
-	<link href="/css/styles.css" rel="stylesheet" />
+	<link href="/css/styles.css" rel="stylesheet"/>
 	<!-- Personnal CSS -->
 	<link rel="stylesheet" href="/css/personnal-style.css">
 </head>
