--- a/front/views/layouts/scripts.ejs
+++ b/front/views/layouts/scripts.ejs
@@ -1,4 +1,4 @@
 <!-- Bootstrap core JS-->
 <script src="/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
